Creamos los primeros test unitarios de ClientController